# Tiro

./: .gitignore  404.html  Dockerfile  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  schema.json  sonar-project.properties
.github/workflows/: build-release.yml  build.yml  clean-untagged-packages.yml  doc.yml  security-scanning.yml  sonarqube.yml  trivy.yml
about/: index.html
background/glossary/: index.html
background/materials/: index.html
background/motivation/: index.html
concepts/: index.html
css/: code_select.css
demo/: data_access.ipynb  example.json  gen_tool.ipynb  graph_access.py  karez_mock.yaml  scenario.py  schema.json  telegraf.conf  tiro_mock.docker-compose.yml  tiro_mock.dockerfile  use1.yaml  utinni_access.py  utinni_config.toml
demo/assets/: data_hall.py
demo/config/: example.json  karez_mock.yaml  pquery.yaml  scenario.yaml  scenario1.yaml  telegraf.conf  use1.yaml  use2.yaml  utinni_config.toml
docs/: about.md  concepts.md  example.json  gen_ref_pages.py  index.md  quickstart.md
docs/background/: concepts.md  glossary.md  materials.md  motivation.md
docs/concepts/: about.md  concepts.md
docs/get_started/: basic_tools.md  index.md  installation.md  karez_integration.md  scenario.md  utinni_integration.md
docs/guides/: asset_library.md  utinni_querying_guide.md
docs/topics/: data_collection_protocol.md  scenario_from_snapshot.md  utinni_querying_guide.md
example/: scenario.yaml  snapshot.csv  use-srv1.yaml  use-srv2.yaml
example/karez/: docker-compose.yml  test_assets.py  utinni-test.ipynb
get_started/: index.html
get_started/basic_tools/: index.html
get_started/installation/: index.html
get_started/karez_integration/: index.html
get_started/scenario/: index.html
get_started/utinni_integration/: index.html
license/: index.html
quickstart/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/cli/: index.html
reference/cli/mock/: index.html
reference/core/: index.html
reference/plugins/: index.html
reference/tiro/: index.html
search/: search_index.json
test/: rack_16_acu_1_hot_mixed.json  rack_20_acu_1_mixed.json  scenario.yaml  snapshot.csv  test_arango.py  test_arangodb_query2.py  test_auto_gen_assets.py  test_decompose.py  test_generator.py  test_generator_api.py  test_library.py  test_scenario_generator.py  test_scenario_generator_from_dt.py  test_scenario_generator_from_snapshot.py  test_scenario_generator_fxms.py  test_scenario_generator_gpt.py  test_utinni.py  test_validate.py  test_validate_path.py  test_vocabulary.py  use1.yaml
tiro/: __init__.py  graphdb.py  mock.py  utils.py  validate.py  vocabulary.py
tiro/assets/: data_hall.py
tiro/cli/: __init__.py  draft.py  mock.py  schema.py  validate.py
tiro/core/: __init__.py  draft.py  mock.py  model.py  scenario.py  utils.py  validate.py
tiro/plugins/: __init__.py  arango.py  karez.py  utinni.py
tiro/tool/: mock.py  schema.py  utils.py  validate.py
tiro/utils/: __init__.py  cookbook_factory.py  scenario_generator.py  telemetry.py  use2query.py
topics/asset_library/: index.html
topics/data_collection_protocol/: index.html
(+59 files in other folders)
