[tool.poetry]
name = "tiro"
version = "0.11.2"
description = ""
authors = ["Zhu Zhaomeng <zhaomeng.zhu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "^1.9.0"
Faker = "^13.3.4"
PyYAML = "^6.0"
rich = "^12.2.0"
nats-py = "^2.1.0"
jsonschema = "^4.4.0"
influxdb-client = "^1.28.0"
karez = {git = "https://github.com/cap-dcwiz/Karez.git", rev = "main"}
pandas = "^1.4.2"
python-arango = "^7.5.0"
typer = "^0.9.0"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.8.0"}
mkdocs = {extras = ["python-legacy"], version = "^1.3.1"}
mkdocs-material = "^8.2.11"
mkdocs-gen-files = "^0.3.4"
mkdocs-literate-nav = "^0.4.1"
mkdocs-section-index = "^0.3.4"
mkdocstrings = "^0.18.1"
mkdocs-typer = "^0.0.2"
Markdown = "^3.3.6"
jupyterlab = "^3.4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tiro = "tiro.cli:app"
