[tool.poetry]
name = "tiro"
version = "0.18.3"
description = ""
authors = ["Zhu Zhaomeng <zhaomeng.zhu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Faker = "^13.3.4"
PyYAML = "^6.0"
nats-py = "^2.1.0"
jsonschema = "^4.4.0"
python-arango = "^7.5.0"
typer = "^0.9.0"
influxdb-client = "^1.36.1"
karez = {git = "https://github.com/cap-dcwiz/karez.git", rev = "v0.11.2"}
loguru = "^0.7.2"
rich = "^13.6.0"
pandas = "^2.1.1"
uvicorn = "<0.26.0"
openpyxl = "^3.1.2"
pydantic = "^2.6.1"
fastapi = "^0.109.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.8.0"}
mkdocs = {extras = ["python-legacy"], version = "^1.3.1"}
mkdocs-material = "^8.2.11"
mkdocs-gen-files = "^0.3.4"
mkdocs-literate-nav = "^0.4.1"
mkdocs-section-index = "^0.3.4"
mkdocstrings = "^0.18.1"
mkdocs-typer = "^0.0.2"
Markdown = "^3.3.6"
jupyterlab = "^3.4.8"
openai = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tiro = "tiro.cli:app"
